# collatz-problem-tester

./: Cargo.toml  LICENSE  README.md
src/: main.rs
